# experimental-chain

./: .gitignore  Cargo.toml  README.md  TODO  cabal.project  flake.nix  hie.yaml  jusion.cabal
app/: Lang.hs  Main.hs
jusion-haskell/: jusion-haskell.cabal
jusion-haskell/src/: Miden.hs  Portal.hs
jusion-haskell/src/Data/Field/: Goldilocks.hs
jusion-haskell/src/Jusion/: Block.hs  Blockchain.hs  Ledger.hs  Oracle.hs  TransactionLog.hs
jusion-haskell/src/MASM/: Types.hs
jusion-haskell/tests/: test.hs  test.input  test2.input  test_oracle.input  test_oracle.masm
jusion-rust/: Cargo.toml
jusion-rust/src/: lib.rs
src/: Field.hs  Jusion.hs  Miden.hs  Nightfall.hs
src/Data/: Field.hs
src/Data/Field/: F17.hs  Goldilocks.hs
src/Jusion/: Block.hs  Common.hs  Hash.hs  Network.hs  Transaction.hs  TransactionLog.hs  Wallet.hs
src/MASM/: Miden.hs
tests/: miden-test.hs  test.hs  test_oracle.input  test_oracle.input.bad  test_oracle.output
