cabal-version:      2.4
name:               jusion
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jakub Zalewski
maintainer:         jakub.zalewski@qredo.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:          Jusion
                            , Miden
                            , Field

    -- Modules included in this executable, other than Main.
    -- other-modules:    Lang

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    --                , bound
    --                , deriving-compat
                      , finite-field
                      , aeson
                      , process
                      , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

-- test suite
test-suite test
    default-language:
        Haskell2010
    ghc-options:  -threaded
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        test.hs
    build-depends:
        base ^>=4.16.4.0
        , tasty
        , tasty-hunit
        , jusion
        , tasty-golden
        , aeson
        , bytestring
        , process
        , tasty-program
        , directory
        , filepath