cabal-version:      2.4
name:               jusion
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jakub Zalewski
maintainer:         jakub.zalewski@qredo.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common language
    default-language: GHC2021
    default-extensions:
        DisambiguateRecordFields,
        TypeFamilies


library
    import: language
    exposed-modules:
        Jusion,
        Jusion.Block,
        Jusion.Common,
        Jusion.Hash,
        Jusion.Wallet,
        Jusion.Transaction,
        Jusion.Ledger,
        Jusion.Blockchain,
        Jusion.TransactionLog,
        Jusion.Network,
        Miden,
        -- MASM
        MASM,
        MASM.Callgraph,
        MASM.Interpreter,
        MASM.Miden,
        MASM.Types,
        Data.Field,
        Data.Field.F17,
        Data.Field.Goldilocks


    -- Modules included in this executable, other than Main.
    -- other-modules:    Lang

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.16.4.0,
                    finite-field,
                    aeson,
                    process,
                    bytestring,
                    containers,
                    hashable,
                    data-default,
                    lens,
                    directory,
                    filepath,
                    temporary,
                    mtl,
                    dlist,
                    text
    hs-source-dirs: src
    ghc-options:    -Wall

-- test suite
test-suite test
    import:         language
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        test.hs
    build-depends:  base ^>=4.16.4.0,
                    tasty,
                    tasty-hunit,
                    jusion,
                    tasty-golden,
                    aeson,
                    bytestring,
                    process,
                    tasty-program,
                    directory,
                    filepath
    ghc-options:    -Wall -threaded